--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 yaml-rust = "0.4"
-ureq = "2.1"
+ureq = "2"
 crossbeam-channel = "0.4.0"
 notify = "5.0.0-pre.10"
+notify-rust = "4"
